# Homework_2.9

./: README.md  authors.json  main.py  pyproject.toml
