[tool.poetry]
name = "homework-2-9"
version = "0.1.0"
description = ""
authors = ["Serhii Pidkopai <spodkopay@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_2"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
